# forecasting_baywheels_demand

./: .gitignore  LICENSE  README.md  pyproject.toml
src/baywheels_forecasting/: __init__.py  cli.py  config.py  data.py  evaluation.py  features.py  models.py  pipeline.py  progress.py
tests/: test_demo_pipeline.py
