[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "forecasting-baywheels-demand"
version = "0.1.0"
description = "Forecast hourly Bay Wheels demand in San Francisco using spectral analysis, SARIMAX, and regularized lagged regression."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Hanna Roed"},
]
dependencies = [
  "holidays>=0.74",
  "matplotlib>=3.9",
  "numpy>=2.1",
  "pandas>=2.2",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
baywheels-forecast = "baywheels_forecasting.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/baywheels_forecasting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
